# robotics_v1

./: .gitmodules  LICENSE  README.md  main  main.cpp
cpp_srvcli/: CMakeLists.txt  package.xml
cpp_srvcli/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
src/robo_cleaner/robo_cleaner_common/: CMakeLists.txt  package.xml  robo_cleaner_commonConfig.cmake
src/robo_cleaner/robo_cleaner_common/src/defines/: RoboCleanerDefines.cpp
src/robo_cleaner/robo_cleaner_common/src/message_helpers/: RoboCleanerMessageHelpers.cpp
src/robo_cleaner/robo_cleaner_gui/: CMakeLists.txt  README.md  package.xml
src/robo_cleaner/robo_cleaner_gui/config/: params.yaml
src/robo_cleaner/robo_cleaner_gui/include/robo_cleaner_gui/: RoboCleanerGui.h
src/robo_cleaner/robo_cleaner_gui/launch/: launch.py
src/robo_cleaner/robo_cleaner_gui/resources/: RoboCleanerGui.rsrc
src/robo_cleaner/robo_cleaner_gui/src/: RoboCleanerGui.cpp  main.cpp
src/robo_cleaner/robo_cleaner_gui/src/config/: RoboCleanerGuiConfigGenerator.cpp
src/robo_cleaner/robo_cleaner_gui/src/defines/: RoboCleanerGuiDefines.cpp
src/robo_cleaner/robo_cleaner_gui/src/external_api/: CleanerControllerExternalBridge.cpp  MovementReporter.cpp  RoboCleanerGuiRos2ParamProvider.cpp
src/robo_cleaner/robo_cleaner_gui/src/helpers/: EnergyHandler.cpp  MovementWatcher.cpp  RoboCleanerBuilder.cpp  RoboCleanerGuiInitHelper.cpp  RoboCleanerSolutionValidator.cpp  SolutionValidator.cpp
src/robo_cleaner/robo_cleaner_gui/src/layout/: RoboCleanerLayout.cpp
src/robo_cleaner/robo_cleaner_interfaces/: CMakeLists.txt  package.xml
src/robo_cleaner/robo_cleaner_interfaces/action/: RobotMove.action
src/robo_cleaner/robo_cleaner_interfaces/msg/: BatteryStatus.msg  InitialRobotState.msg  UInt8MultiArray.msg
src/robo_cleaner/robo_cleaner_interfaces/srv/: ChargeBattery.srv  QueryBatteryStatus.srv  QueryInitialRobotState.srv  RobotMove.srv
src/robo_collector/robo_collector_common/: CMakeLists.txt  package.xml  robo_collector_commonConfig.cmake
src/robo_collector/robo_collector_common/src/message_helpers/: RoboCollectorMessageHelpers.cpp
src/robo_collector/robo_collector_controller/: CMakeLists.txt  package.xml
src/robo_collector/robo_collector_controller/config/: params.yaml
src/robo_collector/robo_collector_controller/include/robo_collector_controller/: RoboCollectorController.h
src/robo_collector/robo_collector_controller/launch/: launch.py
src/robo_collector/robo_collector_controller/resources/: RoboCollectorController.rsrc
src/robo_collector/robo_collector_controller/src/: RoboCollectorController.cpp  main.cpp
src/robo_collector/robo_collector_controller/src/config/: RoboCollectorControllerConfigGenerator.cpp
src/robo_collector/robo_collector_controller/src/external_api/: CollectorGuiExternalBridge.cpp  RoboCollectorControllerRos2ParamProvider.cpp
src/robo_collector/robo_collector_controller/src/helpers/: RoboCollectorControllerBuilder.cpp  RoboCollectorControllerInitHelper.cpp  UserAuthenticateHelper.cpp
src/robo_collector/robo_collector_controller/src/layout/: RoboCollectorControllerLayout.cpp
src/robo_collector/robo_collector_gui/: CMakeLists.txt  README.md  package.xml
src/robo_collector/robo_collector_gui/cmake_helpers/: README.md  helpers.cmake
src/robo_collector/robo_collector_gui/config/: params.yaml
src/robo_collector/robo_collector_gui/launch/: launch.py
src/robo_collector/robo_collector_gui/resources/: RoboCollectorGui.rsrc
src/robo_collector/robo_collector_gui/src/: RoboCollectorGui.cpp  main.cpp
src/robo_collector/robo_collector_interfaces/: CMakeLists.txt  package.xml
src/robo_collector/robo_collector_interfaces/msg/: Direction.msg  RobotMoveType.msg  UserAuthenticate.msg
src/robo_collector/robo_collector_interfaces/srv/: GetCurrentCoins.srv
src/robo_common/: CMakeLists.txt  package.xml  robo_commonConfig.cmake
src/robo_common/cmake_helpers/: helpers.cmake
src/robo_common/cmake_helpers/find_modules/: FindIWYU.cmake
src/robo_common/include/robo_common/field/: Field.h  (+2 more)
src/robo_common/src/animators/: GameEndAnimator.cpp
src/robo_common/src/field/: Field.cpp  FieldPos.cpp  FieldUtils.cpp  Tile.cpp
src/robo_common/src/helpers/: CollisionWatcher.cpp  ConfigFileLoader.cpp  GameEndHelper.cpp  LevelFileLoader.cpp
src/robo_common/src/layout/: RoboCommonLayout.cpp
src/robo_common/src/panels/: IndicatorPanel.cpp  TimePanel.cpp
src/robo_miner/robo_miner_gui/: CMakeLists.txt  README.md  package.xml
src/robo_miner/robo_miner_gui/config/: params.yaml
src/robo_miner/robo_miner_gui/launch/: launch.py
src/robo_miner/robo_miner_gui/resources/: RoboMinerGui.rsrc
src/robo_miner/robo_miner_gui/src/: RoboMinerGui.cpp  main.cpp
src/ur_control_gui/: CMakeLists.txt  package.xml
src/ur_control_gui/config/: params.yaml
src/ur_control_gui/include/ur_control_gui/: UrControlGui.h
src/ur_control_gui/launch/: launch.py
src/ur_control_gui/resources/: UrControlGui.rsrc
src/ur_control_gui/resources/scripts/: command00.script  command01.script  command02.script  command03.script  command04.script  command05.script  command06.script  command07.script  command08.script  command09.script  command10.script
src/ur_control_gui/src/: UrControlGui.cpp
src/ur_control_gui/src/config/: UrControlGuiConfigGenerator.cpp
src/ur_control_gui/src/external_api/: DashboardProvider.cpp  UrControlGuiExternalBridge.cpp  UrControlGuiRos2ParamProvider.cpp
src/ur_control_gui/src/helpers/: ScriptParser.cpp  UrControlGuiBuilder.cpp  UrControlGuiInitHelper.cpp
src/ur_control_gui/src/layout/: UrControlGuiLayout.cpp
src/ur_dev/ur_control/ur_control_bloom/: CMakeLists.txt  package.xml
src/ur_dev/ur_control/ur_control_common/: CMakeLists.txt  package.xml  ur_control_commonConfig.cmake
src/ur_dev/ur_control/ur_control_gui/: CMakeLists.txt  README.md  package.xml
src/ur_dev/urscript/urscript_bridge/: CMakeLists.txt  README.md  package.xml
src/ur_dev/urscript/urscript_common/: CMakeLists.txt  package.xml  urscript_commonConfig.cmake
src/ur_dev/urscript/urscript_interfaces/: CMakeLists.txt  package.xml
(+638 files in other folders)
